feat: refactor and optimize Post and Group modules with Factory and Template Method patterns