@@ -1,6 +1,5 @@
 package com.edusync.service;
 
-import com.edusync.common.enums.ContentType;
 import com.edusync.common.enums.GroupRole;
 import com.edusync.exception.AppException;
 import com.edusync.model.dto.request.CreatePostRequest;
@@ -9,13 +8,13 @@ import com.edusync.model.entity.*;
 import com.edusync.repository.GroupMemberRepository;
 import com.edusync.repository.GroupRepository;
 import com.edusync.repository.PostRepository;
+import com.edusync.service.factory.PostFactory;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,6 +23,7 @@ public class PostService {
     private final PostRepository postRepository;
     private final GroupRepository groupRepository;
     private final GroupMemberRepository groupMemberRepository;
+    private final PostFactory postFactory;
 
     @Transactional
     public PostResponse createPost(Long groupId, CreatePostRequest request, User currentUser) {
@@ -34,44 +34,15 @@ public class PostService {
         Group group = groupRepository.findById(groupId)
                 .orElseThrow(() -> new AppException("Group not found", HttpStatus.NOT_FOUND));
 
-        Post post = null;
-        if (request.getContentType() == ContentType.SNIPPET) {
-            if (request.getCodeContent() == null || request.getCodeContent().trim().isEmpty()) {
-                throw new AppException("Code content is required for Snippet", HttpStatus.BAD_REQUEST);
-            }
-            Snippet snippet = new Snippet();
-            snippet.setTitle(request.getTitle());
-            snippet.setDescription(request.getDescription());
-            snippet.setContentType(ContentType.SNIPPET);
-            snippet.setUser(currentUser);
-            snippet.setGroup(group);
-            snippet.setCodeContent(request.getCodeContent());
-            snippet.setLanguage(request.getLanguage() != null ? request.getLanguage() : "plaintext");
-            post = snippet;
-
-        } else if (request.getContentType() == ContentType.FLASHCARD) {
-            if (request.getFrontSide() == null || request.getBackSide() == null) {
-                throw new AppException("Front and back sides are required for Flashcard", HttpStatus.BAD_REQUEST);
-            }
-            Flashcard flashcard = new Flashcard();
-            flashcard.setTitle(request.getTitle());
-            flashcard.setDescription(request.getDescription());
-            flashcard.setContentType(ContentType.FLASHCARD);
-            flashcard.setUser(currentUser);
-            flashcard.setGroup(group);
-            flashcard.setFrontSide(request.getFrontSide());
-            flashcard.setBackSide(request.getBackSide());
-            post = flashcard;
-        }
-
-        if (post == null) {
-            throw new AppException("Invalid content type", HttpStatus.BAD_REQUEST);
-        }
-
+        // Factory Pattern: delegates creation + validation to PostFactory
+        Post post = postFactory.createPost(request, currentUser, group);
         Post savedPost = postRepository.save(post);
-        return mapToResponse(savedPost);
+
+        // Polymorphism: each entity builds its own response
+        return savedPost.toResponse();
     }
 
+    @Transactional(readOnly = true)
     public List<PostResponse> getGroupPosts(Long groupId, User currentUser) {
         Group group = groupRepository.findById(groupId)
                 .orElseThrow(() -> new AppException("Group not found", HttpStatus.NOT_FOUND));
@@ -83,15 +54,16 @@ public class PostService {
         }
 
         return postRepository.findByGroupIdWithUserOrderByCreatedAtDesc(groupId).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .map(Post::toResponse)
+                .toList();
     }
 
+    @Transactional(readOnly = true)
     public PostResponse getPostDetail(Long groupId, Long postId, User currentUser) {
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new AppException("Post not found", HttpStatus.NOT_FOUND));
 
-        if (!post.getGroup().getId().equals(groupId)) {
+        if (groupId != 0L && !post.getGroup().getId().equals(groupId)) {
             throw new AppException("This post does not belong to the specified group", HttpStatus.BAD_REQUEST);
         }
 
@@ -100,7 +72,25 @@ public class PostService {
                 throw new AppException("You must be a member to view this post", HttpStatus.FORBIDDEN);
             }
         }
-        return mapToResponse(post);
+
+        return post.toResponse();
+    }
+
+    @Transactional
+    public PostResponse updatePost(Long groupId, Long postId, CreatePostRequest request, User currentUser) {
+        Post post = postRepository.findById(postId)
+                .orElseThrow(() -> new AppException("Post not found", HttpStatus.NOT_FOUND));
+
+        if (groupId != 0L && !post.getGroup().getId().equals(groupId)) {
+            throw new AppException("This post does not belong to the specified group", HttpStatus.BAD_REQUEST);
+        }
+
+        if (!post.getUser().getId().equals(currentUser.getId())) {
+            throw new AppException("You can only edit your own posts", HttpStatus.FORBIDDEN);
+        }
+
+        postFactory.updatePost(post, request);
+        return postRepository.save(post).toResponse();
     }
 
     @Transactional
@@ -108,7 +98,7 @@ public class PostService {
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new AppException("Post not found", HttpStatus.NOT_FOUND));
 
-        if (!post.getGroup().getId().equals(groupId)) {
+        if (groupId != 0L && !post.getGroup().getId().equals(groupId)) {
             throw new AppException("This post does not belong to the specified group", HttpStatus.BAD_REQUEST);
         }
 
@@ -122,30 +112,5 @@ public class PostService {
         }
 
         postRepository.delete(post);
-    }
-
-    private PostResponse mapToResponse(Post post) {
-        PostResponse.PostResponseBuilder builder = PostResponse.builder()
-                .id(post.getId())
-                .groupId(post.getGroup().getId())
-                .userId(post.getUser().getId())
-                .username(post.getUser().getUsername())
-                .title(post.getTitle())
-                .description(post.getDescription())
-                .contentType(post.getContentType())
-                .createdAt(post.getCreatedAt());
-
-        if (post instanceof Snippet) {
-            Snippet s = (Snippet) post;
-            builder.codeContent(s.getCodeContent())
-                    .language(s.getLanguage())
-                    .explanationAi(s.getExplanationAi());
-        } else if (post instanceof Flashcard) {
-            Flashcard f = (Flashcard) post;
-            builder.frontSide(f.getFrontSide())
-                    .backSide(f.getBackSide());
-        }
-
-        return builder.build();
     }
 }
